[package]
name = "hal900"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adafruit-feather-rp2040 = "0.3.1"
cortex-m-rt = "0.7"
oorandom = "11.1.3"
embedded-time = "0.12.1"
panic-halt= "0.2.0"
embedded-hal ="0.2.5"
nb = "1.0.0"
smart-leds = "0.3.0"
ws2812-pio = "0.3.0"

